--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     // json-simple 라이브러리 추가
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
+    // google api 라이브러리 추가
+    implementation 'com.google.api-client:google-api-client:2.2.0'
+    implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
 }
 
 //Q 도메인 클래스 생성 위치 변수로 선언
