--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,8 @@ dependencies {
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
     // google api 라이브러리 추가
-    implementation 'com.google.api-client:google-api-client:2.2.0'
+    implementation 'com.google.api-client:google-api-client:1.34.1'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
 }
 
